// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`main CLI > parseCliArgs parses multiple rules and options 1`] = `
{
  "file": "README.md",
  "json": true,
  "provider": "openrouter",
  "rulesPaths": [
    "/Users/Lukas.Steinbrecher/dev/slop-grader/rules/no-ai-slop.json",
    "/Users/Lukas.Steinbrecher/dev/slop-grader/rules/tech-docs.json",
  ],
  "stats": false,
}
`;

exports[`main CLI > parseCliArgs parses valid arguments with defaults 1`] = `
{
  "file": "README.md",
  "json": false,
  "provider": undefined,
  "rulesPaths": [
    "/Users/Lukas.Steinbrecher/dev/slop-grader/rules/no-ai-slop.json",
  ],
  "stats": false,
}
`;

exports[`main CLI > parseCliArgs throws on invalid provider 1`] = `[Error: Unknown provider "invalid". Valid values: jev, openrouter]`;

exports[`main CLI > parseCliArgs throws usage on missing arguments 1`] = `[Error: usage: node main.ts -r <name|path> [-r ...] [--provider <jev|openrouter>] [--json] [--stats] <file>]`;

exports[`main CLI > parseCliArgs throws usage on missing arguments 2`] = `[Error: usage: node main.ts -r <name|path> [-r ...] [--provider <jev|openrouter>] [--json] [--stats] <file>]`;

exports[`main CLI > parseCliArgs throws usage on missing arguments 3`] = `[Error: usage: node main.ts -r <name|path> [-r ...] [--provider <jev|openrouter>] [--json] [--stats] <file>]`;
